--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+A community to spread stories from various domains in various languages.
 
-({{site.baseurl}}/images/Home_poster.png)
+![]({{site.baseurl}}/images/Home_poster.png)
 
 # Posts
