--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>A community to spread stories from various domains in various languages.</p>
 
-<p>(/blogs/images/Home_poster.png)</p>
+<p><img src="/blogs/images/Home_poster.png" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
