--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ search_exclude: true
 image: images/logo.png
 ---
 
-A community to spread stories from various domains in various languages.
+## A community to spread stories from various domains in various languages.
 
 ![]({{site.baseurl}}/images/Home_poster.png)
 
