--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>A community to spread stories from various domains in various languages.</p>
+        <div class="home"><h2 id="a-community-to-spread-stories-from-various-domains-in-various-languages">A community to spread stories from various domains in various languages.</h2>
 
 <p><img src="/blogs/images/Home_poster.png" alt="" /></p>
 
