deploy: c711ae5d6fbbf605b412d3ba1d4e03cf141781a6

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h2 id="a-community-to-spread-stories-from-various-domains-in-various-languages">A community to spread stories from various domains in various languages.</h2>
-
-<p><img src="/blogs/images/Home_poster.png" alt="" /></p>
+        <div class="home"><p><img src="/blogs/images/Home_poster.png" alt="" /></p>
 
 <h1 id="posts">Posts</h1>
 
