--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ image: images/logo.png
 ---
 
 
-![]({{site.baseurl}}/images/Home_poster.jpg)
+## A Community To Spread Stories From Various Domains in Various Languages
 
 # Posts
