deploy: a1f907f6b4152a7232080e7103928ed0b35dd4cc

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/blogs/images/Home_poster.jpg" alt="" /></p>
+        <div class="home"><h2 id="a-community-to-spread-stories-from-various-domains-in-various-languages">A Community To Spread Stories From Various Domains in Various Languages</h2>
 
 <h1 id="posts">Posts</h1>
 
