--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h2 id="a-community-to-spread-stories-from-various-domains-in-various-languages">A Community To Spread Stories From Various Domains in Various Languages</h2>
-
-<h1 id="posts">Posts</h1>
+        <div class="home"><h1 id="posts">Posts</h1>
 
 
 
