--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://clublinguistics.github.io/blogs/404.html" />
 <meta property="og:site_name" content="Club Linguistics" />
 <script type="application/ld+json">
-{"url":"https://clublinguistics.github.io/blogs/404.html","@type":"WebPage","headline":"Club Linguistics","description":"Community to promote various stories from various domains in various languages.","@context":"https://schema.org"}</script>
+{"url":"https://clublinguistics.github.io/blogs/404.html","headline":"Club Linguistics","@type":"WebPage","description":"Community to promote various stories from various domains in various languages.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blogs/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://clublinguistics.github.io/blogs/feed.xml" title="Club Linguistics" /><link rel="shortcut icon" type="image/x-icon" href="/blogs/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
