--- a/search/index.html
+++ b/search/index.html
@@ -115,7 +115,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ClubLinguistics" title="ClubLinguistics"><svg class="svg-icon grey"><use xlink:href="/blogs/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://www.instagram.com/42652075736566756c2e20" title="42652075736566756c2e20"><svg class="svg-icon grey"><use xlink:href="/blogs/assets/minima-social-icons.svg#instagram"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ClubLinguistics" target="_blank" title="ClubLinguistics"><svg class="svg-icon grey"><use xlink:href="/blogs/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://www.instagram.com/42652075736566756c2e20" target="_blank" title="42652075736566756c2e20"><svg class="svg-icon grey"><use xlink:href="/blogs/assets/minima-social-icons.svg#instagram"></use></svg></a></li></ul>
 </div>
 
   </div>
